# Hydra-Essentials

./: .gitignore  01-CLI-Commands.md  02-OmegaConf.md  03-Config-Groups.md  04-Multirun.md  05-Logging-and-Debugging.md  06-Instantiate.md  07-Packages.md  08-MNIST-Project.md  09-Structured-Configs.md  README.md  pyproject.toml
configs/: config.yaml
configs/experiment/: experiment_with_resnet18.yaml  experiment_with_resnet50.yaml
configs/experiments/: experiment_with_resnet50.yaml
configs/loss_function/: arcface.yaml  cosface.yaml  softmax.yaml
grouping_03/: __init__.py  grouping.py
instantiate_06/: instantiate.py  instantiate_args.py  instantiate_args_config.yaml  instantiate_config.yaml  instantiate_convert.py  instantiate_convert_config.yaml  instantiate_get_class.py  instantiate_no_recursive.py  instantiate_no_recursive_config.yaml  instantiate_recursive.py  instantiate_recursive_config.yaml
logging_05/: logging_demo.py
mnist_project/: models.py  requirements.txt
mnist_project_08/: requirements.txt
multirun_04/: __init__.py
omegaconf_02/: 01_creating_configs.py  02_accessing_modifying.py  03_interpolation.py  04_missing_values.py  05_merging.py  06_struct_mode.py  07_structured_configs.py  08_lists.py  09_cli.py  10_saving.py
scripts/: 01_hydra.py  02_omegaconf.py  03_grouping.py  config.yaml  env_config.yaml  instantiate.py  instantiate_config.yaml  interpolated_config.yaml
structured_09/: basic_structured.py  config_groups.py  inheritance.py  interpolation.py  lists_dicts.py  nested_structured.py  optional_fields.py  validation.py
(+37 files in other folders)
